--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,38 @@
+@charset "UTF-8";
 .header {
   margin: 45px 0px 90px 0px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+details {
+  display: block;
+}
+
+details summary {
+  list-style: none;
+  cursor: pointer;
+  position: relative;
+}
+
+details summary::after {
+  content: " ›";
+  font-size: 1rem;
+  position: absolute;
+  margin-left: 0.2rem;
+}
+
+details[open] summary::after {
+  transform: rotate(90deg);
+  color: #082dfa;
+  margin-top: 2px;
+  font-size: 1rem;
 }
 
 .seo__info {
@@ -27,6 +60,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  font-size: 16px;
 }
 
 .container {
