--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,44 @@
 @charset "UTF-8";
 .header {
   margin: 45px 0px 90px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+.header .header__left {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+.header .header__left h5 {
+  color: #000;
+  font-family: Gilroy-Bold;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.header__link ul {
+  display: flex;
+  gap: 2rem;
+}
+
+.span-h5 {
+  color: #F25822;
+  font-family: Gilroy-Bold;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.span-link {
+  color: #F25822;
+  font-family: Gilroy-SemiBold;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 ul {
@@ -9,6 +47,12 @@ ul {
 
 a {
   text-decoration: none;
+  color: #000;
+  font-family: Gilroy-Medium;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 details {
@@ -19,6 +63,12 @@ details summary {
   list-style: none;
   cursor: pointer;
   position: relative;
+}
+
+details[open] ul {
+  flex-direction: column;
+  margin-top: 10px;
+  gap: 5px;
 }
 
 details summary::after {
@@ -37,17 +87,71 @@ details[open] summary::after {
 
 .seo__info {
   margin-bottom: 162px;
+  display: flex;
+  gap: 30px;
 }
 
+.seo__left {
+  width: 49%;
+}
 .seo__left h1 {
   margin-bottom: 17px;
+  color: #000;
+  font-family: Gilroy-Bold;
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.seo__left p {
+  color: #888;
+  font-family: Gilroy-Medium;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 87%;
 }
 .seo__left .button {
   margin-top: 37px;
+  display: flex;
+  gap: 72px;
+  align-items: center;
+}
+.seo__left .button .btn-color {
+  border-radius: 50px;
+  background: #F25822;
+  box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.2);
+  padding: 15px 36px;
+  color: #FFF;
+  font-family: Gilroy-Bold;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+.seo__left .button .btn {
+  color: #AAA;
+  font-family: Gilroy-Bold;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.seo__right {
+  width: 40%;
+}
+
+.img-header {
+  width: 100%;
+  height: 100%;
 }
 
 .seo__logo {
   padding: 97px 0px;
+  display: flex;
+  justify-content: space-between;
 }
 
 * {
@@ -63,8 +167,20 @@ body {
   font-size: 16px;
 }
 
+@font-face {
+  font-family: "Gilroy-Bold";
+  src: url("/font/Gilroy-Bold.ttf");
+}
+@font-face {
+  font-family: "Gilroy-SemiBold";
+  src: url("/font/Gilroy-SemiBold.ttf");
+}
+@font-face {
+  font-family: "Gilroy-Medium";
+  src: url("/font/Gilroy-Medium.ttf");
+}
 .container {
-  width: 1200px;
+  max-width: 1200px;
   padding: 0px 15px;
   margin: 0 auto;
 }
