--- a/scss/_section-seo.scss
+++ b/scss/_section-seo.scss
@@ -1,18 +1,75 @@
 .seo__info {
 	margin-bottom: 162px;
+	display: flex;
+	gap: 30px;
+
 }
 
 .seo__left {
+	width: 49%;
 
 	h1 {
 		margin-bottom: 17px;
+		color: #000;
+		font-family: Gilroy-Bold;
+		font-size: 60px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+	}
+
+	p {
+		color: #888;
+		font-family: Gilroy-Medium;
+		font-size: 20px;
+		font-style: normal;
+		font-weight: 400;
+		line-height: normal;
+		width: 87%;
 	}
 
 	.button {
 		margin-top: 37px;
+		display: flex;
+		gap: 72px;
+		align-items: center;
+
+		.btn-color {
+			border-radius: 50px;
+			background: #F25822;
+			box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
+			padding: 15px 36px;
+			color: #FFF;
+			font-family: Gilroy-Bold;
+			font-size: 15px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+		}
+
+		.btn {
+			color: #AAA;
+			font-family: Gilroy-Bold;
+			font-size: 15px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+		}
 	}
+}
+
+.seo__right {
+	width: 40%;
+}
+
+.img-header {
+	width: 100%;
+	height: 100%;
+
 }
 
 .seo__logo {
 	padding: 97px 0px;
+	display: flex;
+	justify-content: space-between;
 }
