--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,8 +14,23 @@ body {
 	font-size: 16px;
 }
 
+@font-face {
+	font-family: 'Gilroy-Bold';
+	src: url('/font/Gilroy-Bold.ttf');
+}
+
+@font-face {
+	font-family: 'Gilroy-SemiBold';
+	src: url('/font/Gilroy-SemiBold.ttf');
+}
+
+@font-face {
+	font-family: 'Gilroy-Medium';
+	src: url('/font/Gilroy-Medium.ttf');
+}
+
 .container {
-	width: 1200px;
+	max-width: 1200px;
 	padding: 0px 15px;
 	margin: 0 auto;
 }
