--- a/css/main.css
+++ b/css/main.css
@@ -1,109 +1,56 @@
-@charset "UTF-8";
-.header {
-  margin: 45px 0px 90px 0px;
-  display: flex;
-  justify-content: space-between;
-}
-.header .header__left {
-  display: flex;
-  align-items: center;
-  gap: 14px;
-}
-.header .header__left h5 {
-  color: #000;
-  font-family: Gilroy-Bold;
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
+header {
+  padding-bottom: 164px;
 }
 
-.header__link ul {
+.header__nav {
   display: flex;
   gap: 2rem;
+  justify-content: center;
 }
-
-.span-h5 {
-  color: #F25822;
-  font-family: Gilroy-Bold;
-  font-size: 24px;
+.header__nav .header__nav-link {
+  color: var(--ffffff, #FFF);
+  font-family: Open Sans;
+  font-size: 16px;
   font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   line-height: normal;
-}
-
-.span-link {
-  color: #F25822;
-  font-family: Gilroy-SemiBold;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-ul {
-  list-style-type: none;
-}
-
-a {
+  padding: 2.5rem 0;
   text-decoration: none;
-  color: #000;
-  font-family: Gilroy-Medium;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
 
-details {
-  display: block;
-}
-
-details summary {
-  list-style: none;
-  cursor: pointer;
-  position: relative;
-}
-
-details[open] ul {
-  flex-direction: column;
-  margin-top: 10px;
-  gap: 5px;
-}
-
-details summary::after {
-  content: " ›";
-  font-size: 1rem;
-  position: absolute;
-  margin-left: 0.2rem;
-}
-
-details[open] summary::after {
-  transform: rotate(90deg);
-  color: #082dfa;
-  margin-top: 2px;
-  font-size: 1rem;
-}
-
-.seo__info {
-  margin-bottom: 162px;
+.artificial__info {
+  margin-bottom: 100px;
   display: flex;
   gap: 30px;
+  justify-content: space-between;
 }
 
-.seo__left {
+.artificial__left {
   width: 49%;
+  flex-direction: column;
+  justify-content: space-between;
 }
-.seo__left h1 {
-  margin-bottom: 17px;
+.artificial__left h6 {
+  color: var(--3-a-68-b-8, #3A68B8);
+  font-family: Open Sans;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 160%;
+  /* 28.8px */
+  text-transform: uppercase;
+  padding-bottom: 10px;
+}
+.artificial__left h1 {
   color: #000;
   font-family: Gilroy-Bold;
   font-size: 60px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  padding-bottom: 40px;
 }
-.seo__left p {
+.artificial__left p {
   color: #888;
   font-family: Gilroy-Medium;
   font-size: 20px;
@@ -112,43 +59,35 @@ details[open] summary::after {
   line-height: normal;
   width: 87%;
 }
-.seo__left .button {
-  margin-top: 37px;
+.artificial__left .button {
+  margin-top: 50px;
   display: flex;
-  gap: 72px;
+  gap: 1.2rem;
   align-items: center;
 }
-.seo__left .button .btn-color {
-  border-radius: 50px;
-  background: #F25822;
-  box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.2);
-  padding: 15px 36px;
-  color: #FFF;
-  font-family: Gilroy-Bold;
-  font-size: 15px;
+.artificial__left .button a {
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  background: var(--3-a-68-b-8, #3A68B8);
+  text-decoration: none;
+  color: var(--ffffff, #FFF);
+  font-family: Open Sans;
+  font-size: 20px;
   font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-.seo__left .button .btn {
-  color: #AAA;
-  font-family: Gilroy-Bold;
-  font-size: 15px;
-  font-style: normal;
-  font-weight: 400;
+  font-weight: 600;
   line-height: normal;
 }
 
-.seo__right {
+.artificial__right {
   width: 40%;
 }
 
-.img-header {
+.right-img {
   width: 100%;
   height: 100%;
 }
 
-.seo__logo {
+.artificial__logo {
   padding: 97px 0px;
   display: flex;
   justify-content: space-between;
@@ -165,20 +104,11 @@ body {
   height: 100%;
   width: 100%;
   font-size: 16px;
+  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
+  background: var(--020-a-18, #020A18);
 }
 
-@font-face {
-  font-family: "Gilroy-Bold";
-  src: url("/font/Gilroy-Bold.ttf");
-}
-@font-face {
-  font-family: "Gilroy-SemiBold";
-  src: url("/font/Gilroy-SemiBold.ttf");
-}
-@font-face {
-  font-family: "Gilroy-Medium";
-  src: url("/font/Gilroy-Medium.ttf");
-}
 .container {
   max-width: 1200px;
   padding: 0px 15px;
