--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,93 +1,20 @@
-.header {
-	margin: 45px 0px 90px 0px;
+header {
+	padding-bottom: 164px;
+}
+
+.header__nav {
 	display: flex;
-	justify-content: space-between;
+	gap: 2rem;
+	justify-content: center;
 
-	.header__left {
-		display: flex;
-		align-items: center;
-		gap: 14px;
-
-		h5 {
-			color: #000;
-			font-family: Gilroy-Bold;
-			font-size: 24px;
-			font-style: normal;
-			font-weight: 400;
-			line-height: normal;
-		}
+	.header__nav-link {
+		color: var(--ffffff, #FFF);
+		font-family: Open Sans;
+		font-size: 16px;
+		font-style: normal;
+		font-weight: 600;
+		line-height: normal;
+		padding: 2.5rem 0;
+		text-decoration: none;
 	}
-
-}
-
-.header__link {
-
-	ul {
-		display: flex;
-		gap: 2rem;
-	}
-}
-
-.span-h5 {
-	color: #F25822;
-	font-family: Gilroy-Bold;
-	font-size: 24px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-}
-
-.span-link {
-	color: #F25822;
-	font-family: Gilroy-SemiBold;
-	font-size: 14px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-}
-
-
-
-ul {
-	list-style-type: none;
-}
-
-a {
-	text-decoration: none;
-	color: #000;
-	font-family: Gilroy-Medium;
-	font-size: 14px;
-	font-style: normal;
-	font-weight: 400;
-	line-height: normal;
-}
-
-details {
-	display: block;
-}
-
-details summary {
-	list-style: none;
-	cursor: pointer;
-	position: relative;
-}
-
-details[open] ul {
-	flex-direction: column;
-	margin-top: 10px;
-	gap: 5px;
-}
-
-details summary::after {
-	content: ' ›';
-	font-size: 1rem;
-	position: absolute;
-	margin-left: 0.2rem;
-}
-
-details[open] summary::after {
-	transform: rotate(90deg);
-	color: #082dfa;
-	margin-top: 2px;
-	font-size: 1rem;
 }
