--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,22 +12,12 @@ body {
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
+	font-family: 'Open Sans', sans-serif;
+	font-family: 'Roboto', sans-serif;
+	background: var(--020-a-18, #020A18);
+
 }
 
-@font-face {
-	font-family: 'Gilroy-Bold';
-	src: url('/font/Gilroy-Bold.ttf');
-}
-
-@font-face {
-	font-family: 'Gilroy-SemiBold';
-	src: url('/font/Gilroy-SemiBold.ttf');
-}
-
-@font-face {
-	font-family: 'Gilroy-Medium';
-	src: url('/font/Gilroy-Medium.ttf');
-}
 
 .container {
 	max-width: 1200px;
