--- a/scss/_section-seo.scss
+++ b/scss/_section-seo.scss
@@ -10,6 +10,7 @@
 	width: 49%;
 	flex-direction: column;
 	justify-content: space-between;
+	display: flex;
 
 	h6 {
 		color: var(--3-a-68-b-8, #3A68B8);
