--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,9 @@
 @import 'header';
 @import 'section-seo';
+@import 'apply';
+@import 'items';
+@import 'what';
+@import 'footer';
 
 * {
 	margin: 0;
