--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -18,3 +18,26 @@ header {
 		text-decoration: none;
 	}
 }
+
+@media (max-width: 375px) {
+
+	.center {
+		padding-left: calc(50% - 179.5px);
+		padding-right: calc(50% - 179.5px);
+	}
+
+	header {
+
+		padding-bottom: 64px;
+
+		.header__nav {
+
+			gap: 1rem;
+
+			.header__nav-link {
+				font-size: 14px;
+			}
+		}
+	}
+
+}
