--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -46,3 +46,27 @@
 		gap: 60px;
 	}
 }
+
+@media (max-width: 1024px) {
+
+	.items {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 32px;
+
+		.item {
+			width: 362px;
+		}
+
+		.item-none {
+			display: none;
+		}
+	}
+}
+
+@media (max-width: 375px) {
+	.items {
+		padding-bottom: 96px;
+	}
+}
