--- a/scss/_section-seo.scss
+++ b/scss/_section-seo.scss
@@ -88,3 +88,92 @@
 	display: flex;
 	justify-content: space-between;
 }
+
+.center {
+	padding-left: calc(50% - 573px);
+	padding-right: calc(50% - 573px);
+}
+
+@media (max-width: 1024px) {
+
+	.center {
+		padding-left: calc(50% - 376px);
+		padding-right: calc(50% - 376px);
+	}
+
+	.artificial__info {
+		flex-direction: column;
+		align-items: center;
+		gap: 128px
+	}
+
+	.artificial__left {
+
+		width: 77%;
+
+		h6 {
+			font-size: 16px;
+		}
+
+		h1 {
+			font-size: 48px;
+		}
+
+	}
+
+	.artificial__right {
+		width: 60%;
+	}
+
+	.artificial__logo {
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 30px;
+		padding: 97px 40px 120px 40px;
+	}
+}
+
+@media (max-width: 375px) {
+
+	.center {
+		padding-left: calc(50% - 172px);
+		padding-right: calc(50% - 172px);
+	}
+
+	.artificial__info {
+		flex-direction: column;
+		align-items: center;
+		gap: 128px
+	}
+
+	.artificial__left {
+		text-align: center;
+		width: 93%;
+
+		h6 {
+			font-size: 14px;
+			padding-bottom: 16px;
+		}
+
+		h1 {
+			font-size: 28px;
+			padding-bottom: 64px;
+		}
+
+		.button {
+			margin-top: 39px;
+			flex-direction: column;
+			gap: 24px;
+		}
+
+	}
+
+	.artificial__right {
+		width: 100%;
+	}
+
+	.artificial__logo {
+		gap: 32px;
+		padding: 0px 40px 108px 40px;
+	}
+}
