--- a/scss/_what.scss
+++ b/scss/_what.scss
@@ -32,3 +32,40 @@
 		}
 	}
 }
+
+@media (max-width: 1024px) {
+
+	.what {
+		flex-direction: column;
+		align-items: center;
+		gap: 64px;
+	}
+}
+
+@media (max-width: 375px) {
+	.what {
+		gap: 32px;
+		padding-bottom: 96px;
+
+		.what__left {
+			text-align: center;
+
+			h4 {
+				font-size: 24px;
+				width: 100%;
+			}
+
+			p {
+				width: 100%;
+			}
+		}
+
+		.what__right {
+
+			img {
+				width: 100%;
+			}
+		}
+	}
+
+}
