--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,9 @@
+.container {
+	max-width: 1178px;
+	margin: 0 auto;
+	padding: 0px 15px;
+}
+
 header {
 	padding-bottom: 164px;
 }
@@ -21,10 +27,10 @@ header {
 
 @media (max-width: 375px) {
 
-	.center {
-		padding-left: calc(50% - 179.5px);
-		padding-right: calc(50% - 179.5px);
-	}
+	// .center {
+	// 	padding-left: calc(50% - 179.5px);
+	// 	padding-right: calc(50% - 179.5px);
+	// }
 
 	header {
 
